<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/size_l"
    android:background="@drawable/user_card_style"
    android:paddingStart="@dimen/user_card_padding_start_end"
    android:paddingTop="@dimen/card_padding"
    android:paddingEnd="@dimen/user_card_padding_start_end"
    android:paddingBottom="@dimen/card_padding">

    <TextView
        android:id="@+id/balance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_xxl"
        android:text="@string/balance"
        android:textColor="@color/orange"
        android:textSize="@dimen/size_l"
        app:layout_constraintEnd_toStartOf="@id/more_image"
        app:layout_constraintStart_toEndOf="@id/image_container"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/image_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/green"
            app:strokeWidth="1dp">

            <ImageView
                android:id="@+id/user_image"
                android:layout_width="@dimen/image_width"
                android:layout_height="@dimen/image_height"
                tools:background="@drawable/safak"
                android:elevation="1dp" />


        </com.google.android.material.card.MaterialCardView>

        <ImageView
            android:id="@+id/status"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/ic_background_color_avatar"
            android:elevation="10dp"
            android:src="@drawable/ic_background_status"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_s"
        android:layout_marginTop="@dimen/margin_l"
        android:textColor="@color/white"
        android:textSize="@dimen/size_number"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/more_image"
        app:layout_constraintStart_toEndOf="@id/currency"
        app:layout_constraintTop_toBottomOf="@id/balance"
        tools:text="@string/your_balance" />

    <TextView
        android:id="@+id/currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_l"
        android:textColor="@color/white"
        android:textSize="@dimen/size_number"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/balance"
        app:layout_constraintTop_toBottomOf="@id/balance"
        tools:text="@string/dollar_sign" />

    <ImageView
        android:id="@+id/more_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_forward"
        app:layout_constraintBottom_toBottomOf="@id/image_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/image_container" />
</androidx.constraintlayout.widget.ConstraintLayout>